--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
   <title>Ahumados Ahumada</title>
   <meta name="description"
-    content="Ahumados a la orden" />
+    content="Carne ahumada por encargo" />
   <meta name="keywords" content="react,material" />
   <meta name="author" content="Jarb29" />
 </head>
